--- a/base-laravel-api-main/composer.json
+++ b/base-laravel-api-main/composer.json
@@ -14,6 +14,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "spatie/laravel-medialibrary": "9.0.0",
+        "symfony/browser-kit": "^7.1",
+        "symfony/css-selector": "^7.1",
+        "symfony/http-client": "^6.2",
         "systemson/laravel-api-maker": "0.1.x-dev",
         "systemson/laravel-model-validations": "0.1.x-dev"
     },
