--- a/api/composer.json
+++ b/api/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^1.1",
         "spatie/laravel-medialibrary": "9.0.0",
         "symfony/browser-kit": "^7.1",
         "symfony/css-selector": "^7.1",
