--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.9.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -28,7 +29,8 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
